--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,10 +1,12 @@
 Changes
 =======
 
-1.1 (unreleased)
+1.1 (2011/11/14)
 ----------------
 
-* ...
+* Update code for Silva 3.0.
+
+* Add more events to by logged (there are more in 3.0).
 
 1.0 (2010/12/20)
 ----------------
