--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,10 +1,11 @@
 Changes
 =======
 
-1.3 (unreleased)
-----------------
+1.2.1 (2012/03/01)
+------------------
 
-* ...
+* Make sure that entries contains only strings, in order to create
+  valid SQL queries.
 
 1.2 (2012/02/23)
 ----------------
