--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,10 +1,10 @@
 Changes
 =======
 
-1.3 (unreleased)
-----------------
+1.2.2 (2012/03/12)
+------------------
 
-* ...
+* Remove debug warning.
 
 1.2.1 (2012/03/01)
 ------------------
